--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+#Global configuration
+spring.application.name=SafetyNetAlerts
+
+#Tomcat configuration
+server.port=8080
+
+#Log level configuration
+logging.level.root=ERROR
+logging.level.com.openclassrooms=INFO
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
+
+
+data.jsonFilePath = src/main/resources/data.json
