--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,9 @@ server.port=8080
 
 #Log level configuration
 logging.level.root=ERROR
-logging.level.com.openclassrooms=INFO
+logging.level.com.safetynet.alerts=INFO 
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
+logging.file=logs/SafetyNetAlertsLog.log
 
 
 data.jsonFilePath = src/main/resources/data.json
