--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,11 @@ server.port=8080
 logging.level.root=ERROR
 logging.level.com.safetynet.alerts=INFO 
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
-logging.file=logs/SafetyNetAlertsLog.log
 
 
+#Json file path
 data.jsonFilePath = src/main/resources/data.json
+
+#Actuator configuration 
+management.trace.http.enabled: true
+management.endpoints.web.exposure.include=health,info,metrics,httptrace
