--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -2,26 +2,25 @@ name=PropertiesConfig
 property.filename = logs
 appenders = console, file
 
-#console configuration
-
-rootLogger.level = info
-rootLogger.appenderRefs = stdout
-rootLogger.appenderRef.stdout.ref = STDOUT
-
+#console configuration 
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern=[%-5level] %d{dd MMM yyyy HH:mm:ss} [%t] %c{1} - %msg%n
+appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} [%-5level] [%t] %c{1} - %m%n
 
-# file configuration 
+#file configuration 
 appender.file.type = File
 appender.file.name = LOGFILE
-appender.file.fileName=${filename}/alertsLogs.log
+appender.file.fileName=${filename}/alerts.log
 appender.file.layout.type=PatternLayout
-appender.file.layout.pattern=[%-5level] %d{dd MMM yyyy HH:mm:ss} [%t] %c{1} - %msg%n
+appender.file.layout.pattern=%d{yyyy-MM-dd HH:mm:ss.SSS} [%-5level] [%t] %c{1} - %m%n
+
 loggers=file
 logger.file.name=com.safetynet.alerts
 logger.file.level = debug
 logger.file.appenderRefs = file
 logger.file.appenderRef.file.ref = LOGFILE
 
+rootLogger.level = info
+rootLogger.appenderRefs = STDOUT
+rootLogger.appenderRef.stdout.ref = STDOUT
